--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,10 @@ current_version = 0.1.1
 commit = True
 tag = True
 
+[bumpversion:file:setup.cfg]
+search = version = {current_version}
+replace = version = {new_version}
+
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
