--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 credentials
 credentials/
 credentials/*
+
+/feather
+/feather/
+/feather/*
+
+# Byte-compiled / optimized / DLL files
 *.xlsx
 *.csv
 *.feather
